# Ren

./: .gitignore  engine_config.h.in  meson.build
shaders/: SpriteRender.glsl  SpriteRender.vert  normals.glsl  renderer2d.frag  renderer2d.glsl  renderer2d.vert
src/: Framebuffer.cpp  GameCore.cpp  GameLauncher.cpp  Renderbuffer.cpp  ResourceManager.cpp  TextRenderer.cpp  basic_renderer.cpp  meson.build  resource_manager.cpp  shader.cpp  sprite_renderer.cpp  texture.cpp
src/Renderer/: BasicRenderer.cpp  Renderer.cpp  Shader.cpp  SpriteRenderer.cpp  TextRenderer.cpp  meson.build
src/Renderer/OpenGL/: Buffer.cpp  Framebuffer.cpp  RenderAPI.cpp  Renderbuffer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp
src/include/Ren/: Camera.h  Core.h  Engine.h  Framebuffer.h  GLFWInputEnums.h  GameCore.h  GameLauncher.h  Helper.hpp  InputInterface.hpp  Logger.hpp  MenuSystem.hpp  Renderbuffer.h  ResourceManager.h  TextRenderer.h  Timer.hpp  basic_renderer.h  resource_manager.h  shader.h  sprite_renderer.h  texture.h
src/include/Ren/Renderer/: AtlasTextRenderer.hpp  BasicRenderer.h  Renderer.h  Shader.h  SpriteRenderer.h  TextRenderer.h
src/include/Ren/Renderer/OpenGL/: Buffer.h  Framebuffer.h  RenderAPI.h  Renderbuffer.h  Shader.h  Texture.h  VertexArray.h
src/include/Ren/ecs/: Components.hpp  Scene.hpp  SceneView.hpp  Systems.hpp  ecs.hpp
src/include/Ren/interfaces/: Icamera.h  Observer.h
subprojects/: box2d.wrap  imgui.wrap
subprojects/freetype/: meson.build
subprojects/glad/: meson.build
subprojects/glfw/: meson.build
subprojects/imgui/: meson.build
