ren_renderer_src = files(
    'OpenGL/Buffer.cpp',
    'OpenGL/VertexArray.cpp',
    'OpenGL/RenderAPI.cpp',
    'OpenGL/Framebuffer.cpp',
    'OpenGL/Texture.cpp',
    'OpenGL/Renderbuffer.cpp',
    'Renderer.cpp',
    'SpriteRenderer.cpp',
    'BasicRenderer.cpp',
    'TextRenderer.cpp',
    'Shader.cpp'
)

ren_src = [ren_src, ren_renderer_src]