ren_renderer_src = files(
    'OpenGL/Buffer.cpp',
    'OpenGL/VertexArray.cpp',
    'OpenGL/RenderAPI.cpp',
    'OpenGL/Framebuffer.cpp',
    'OpenGL/Texture.cpp',
    'OpenGL/Renderbuffer.cpp',
    'OpenGL/Shader.cpp',
    'Renderer.cpp',
    'BasicRenderer.cpp',
    'TextRenderer.cpp',
    'SpriteRenderer.cpp'
)

ren_src = [ren_src, ren_renderer_src]